PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Valid/VariableAssignmentTypeCheck.pf
module VariableAssignmentTypeCheck {

    counter Int = 5
    str String = "Test"
}