PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/VariableAssignmentTypeCheck.pf
module VariableAssignmentTypeCheck {

    counter Int = "error"
}